# PRO2

./: README.MD
p0/Rational/: CMakeLists.txt  Rational_pointer.c  Rational_pointer.h  Rational_struct.c  Rational_struct.h  main.c
p0/code/: Rational_pointer.c  Rational_pointer.h  Rational_struct.c  Rational_struct.h  main.c
p1/Practica/: dynamic_list.h  main  static_list.h.gch  test  types.h  types.h.gch
p1/code/: config.cmake  dynamic_list.c  main.c  static_list.c  static_list.h
p1/code/script_minimos/: delete1_Static.txt  delete2_Static.txt  new_Static.txt  play_Static.txt
p2/CLion/P2/: song_list.c  song_list.h  user_list.c  user_list.h
p2/CLion/__MACOSX/: ._P2
p2/CLion/__MACOSX/P2/: ._main.c  ._types.h  ._user_list.h
p2/Practica/: main  main.c  song_list.c  song_list.h  test_song_list  test_user_list  types.h  user_list.c  user_list.h
p2/Practica/script_minimos/: remove_output.txt
p2/ccode/: main.c  song_list.h  types.h  user_list.c
p2/code/: config.cmake  song_list.c  user_list.h
